# test.md

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.alpine  LICENSE  README.md  TEST.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  examples.md  specification.md
internal/cli/: cli.go
internal/hashing/: hashing.go  hashing_test.go
internal/models/: models.go
internal/parser/: config.go  parser.go  parser_test.go
internal/report/: report.go
internal/resolver/: resolver.go  resolver_test.go
internal/state/: flock.go  state.go  state_test.go
skills/testmd/: SKILL.md
skills/testmd/references/: cli.md  examples.md  specification.md
src/testmd/: __init__.py  cli.py  hashing.py  models.py  parser.py  patterns.py  report.py  resolver.py  state.py
tests/: test_hashing.py  test_parser.py  test_patterns.py  test_resolver.py  test_state.py
